@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.207 2003/01/10 14:46:55 stelian Exp $
+$Id: CHANGES,v 1.208 2003/01/21 10:42:24 stelian Exp $
 
 Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 =======================================================================
@@ -38,6 +38,11 @@ Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
 
 8.	Fixed build with very old versions of libext2fs, where
 	EXT2_FT_* constants were undefined.
+
+9.	Made dump accept the dumpdates path on the command line
+	(-D file option) instead of using only the hardcoded one.
+	Thanks to Piete Brooks <pb22@users.sourceforge.net> for the
+	suggestion.
 
 Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
 =======================================================================
